--- a/Projeto-receitas/css/style.css
+++ b/Projeto-receitas/css/style.css
@@ -1,3 +1,18 @@
 img{
     border-radius: 16px;
 }
+
+body{
+    background: url("../imagens/Página\ de\ receita.jpg") no-repeat;
+    background-size: cover;
+}
+
+#pagina{
+    border: 1px solid red;
+    background-color: #F0E8C2;
+    border-radius: 24px;
+    padding: 24px;
+    width: 800px;
+    box-sizing: border-box;
+    margin: 48px auto;
+}
