trabalhando com fontes

--- a/Projeto-receitas/css/style.css
+++ b/Projeto-receitas/css/style.css
@@ -1,3 +1,9 @@
+:root{
+    font-family: "alice", serif;
+    line-height: 150%;
+    color: #573A37;
+}
+
 img{
     border-radius: 16px;
 }
@@ -8,11 +14,23 @@ body{
 }
 
 #pagina{
-    border: 1px solid red;
     background-color: #F0E8C2;
     border-radius: 24px;
     padding: 24px;
     width: 800px;
     box-sizing: border-box;
     margin: 48px auto;
+}
+
+h1{
+    line-height: 140%;
+    font-size: 40px;
+}
+
+h2{
+    font-size: 24px;
+}
+
+h1, h2{
+    color: #291B1A;
 }
