--- a/Projeto-receitas/css/style.css
+++ b/Projeto-receitas/css/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0; 
+}
+
 :root{
     font-family: "alice", serif;
     line-height: 150%;
@@ -25,6 +30,7 @@ body{
 h1{
     line-height: 140%;
     font-size: 40px;
+    margin-bottom: 4px;
 }
 
 h2{
@@ -33,4 +39,22 @@ h2{
 
 h1, h2{
     color: #291B1A;
+    margin-bottom: 4px;
+    line-height: 150%;
+}
+
+ul{
+    padding-left: 24px;
+}
+
+main{
+    padding: 24px;
+}
+
+section p + p{
+    margin-top: 12px;
+}
+
+section + section{
+    margin: 24px;
 }
