--- a/Projeto-Portal-De-Noticias/styles/global.css
+++ b/Projeto-Portal-De-Noticias/styles/global.css
@@ -11,9 +11,30 @@
     --stroke-color: #1E293B;
     --texr-color-primary: #F1F5F9;
     --text-color-secundary: #CBD5E1;
+    --font-family: 'Archivo', sans-serif;
+    --heading1: 800 24px/135% var(--font-family);
+    --heading2: 800 16px/140% var(--font-family);
+    --heading3: 800 14px/140% var(--font-family);
+    --Span: 600 14px/145% var(--font-family);
+    --text: 400 16px/140% var(--font-family);
+    --Paragraph: 400 14px/160% var(--font-family);
 }
 
 body{
+    font: var(--text);
     color: var(--texr-color-primary);
     background-color: var(--bg-color);
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover{
+    color: var(--brand-color-light);
+}
+
+h1, h2, h3 {
+    font: inherit;
 }
